// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders calendar page 1`] = `
Array [
  <a
    href=""
    onClick={[Function]}
    page="http://localhost:3000/Calendar"
  >
    Calendar
  </a>,
  " ",
]
`;

exports[`renders echo page 1`] = `
Array [
  <a
    href=""
    onClick={[Function]}
    page="http://localhost:3000/Echo"
  >
    Echo
  </a>,
  " ",
]
`;

exports[`renders email page 1`] = `
Array [
  <a
    href=""
    onClick={[Function]}
    page="http://localhost:3000/Email"
  >
    Email
  </a>,
  " ",
]
`;

exports[`renders map page 1`] = `
Array [
  <a
    href=""
    onClick={[Function]}
    page="http://localhost:3000/Map"
  >
    Map
  </a>,
  " ",
]
`;

exports[`renders timeline page 1`] = `
Array [
  <a
    href=""
    onClick={[Function]}
    page="http://localhost:3000/Timeline"
  >
    Timeline
  </a>,
  " ",
]
`;
